methods.flowerpot.FlowerPot.scala.error
Compilation error:
FlowerPot:33: error: not found: value color
  faireFleur(color.RED)
             ^FlowerPot:35: error: not found: value color
  faireFleur(color.CYAN)
             ^FlowerPot:39: error: not found: value color
  faireFleur(color.ORANGE)
             ^FlowerPot:43: error: not found: value color
  faireFleur(color.GREEN)
             ^FlowerPot:45: error: not found: value color
  faireFleur(color.PINK)
             ^